--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ repositories {
 	
 	maven { url 'https://maven.terraformersmc.com/releases' }
 	maven { url "https://maven.shedaniel.me/" }
-	// maven { url 'https://jitpack.io' }
-	// maven { url 'https://maven.gegy.dev' }
+	maven { url 'https://jitpack.io' }
+	maven { url 'https://maven.gegy.dev' }
 }
 
 dependencies {
@@ -28,21 +28,23 @@ dependencies {
 
 	// fapi
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
-	// includes
-	
-	// compiletime deps
-	
-	// apis
-	modApi ("com.terraformersmc:modmenu:${modmenu_version}") { // NOTE no clue which of these three have fapi in em, so here we are
+
+	modImplementation ("com.terraformersmc:modmenu:${modmenu_version}") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
-	// modApi ("dev.architectury:architectury-fabric:${project.architectury_version}") {
-	// 	exclude(group: "net.fabricmc.fabric-api")
-	// }
-	modApi ("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
+	
+	include modApi("com.electronwill.night-config:core:${project.night_core}")
+	include modApi("com.electronwill.night-config:toml:${project.night_toml}")
+	
+	include modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_version}") { // one or the other
 		exclude(group: "net.fabricmc.fabric-api")
 	}
+	include modApi("dev.lambdaurora:spruceui:${project.spruceui_version}")
+	
+	include modApi("com.github.LlamaLad7:MixinExtras:0.0.9") // may come in handy if i have the same issue as last time
+	annotationProcessor "com.github.LlamaLad7:MixinExtras:0.0.9"
+	
+	
 	
 }
 
