--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
 	id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
+sourceCompatibility = JavaVersion.VERSION_18
+targetCompatibility = JavaVersion.VERSION_18
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
@@ -36,13 +36,13 @@ dependencies {
 	include modApi("com.electronwill.night-config:core:${project.night_core}")
 	include modApi("com.electronwill.night-config:toml:${project.night_toml}")
 	
-	include modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_version}") { // one or the other
+	include modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_version}") { // one or the other, most likely spruce
 		exclude(group: "net.fabricmc.fabric-api")
 	}
 	include modApi("dev.lambdaurora:spruceui:${project.spruceui_version}")
 	
-	include modApi("com.github.LlamaLad7:MixinExtras:0.0.9") // may come in handy if i have the same issue as last time
-	annotationProcessor "com.github.LlamaLad7:MixinExtras:0.0.9"
+	include modApi("com.github.LlamaLad7:MixinExtras:0.1.0-rc5")
+	annotationProcessor "com.github.LlamaLad7:MixinExtras:0.1.0-rc5"
 	
 	
 	
