--- a/gradle.properties
+++ b/gradle.properties
@@ -14,8 +14,7 @@ archives_base_name = pandora
 # Dependencies
 modmenu_version=4.0.4
 slf4j_simple_version=1.7.9 # will crash if updated
-night_core=3.6.6
-night_toml=3.6.6
+snakeyaml_engine_version=2.4
 cloth_config_version=8.2.88
 spruceui_version=3.3.3+1.18
 architectury_version=5.12.44
