--- a/build.gradle
+++ b/build.gradle
@@ -29,17 +29,20 @@ dependencies {
 	// fapi
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	modImplementation ("com.terraformersmc:modmenu:${modmenu_version}") {
+	modImplementation ("com.terraformersmc:modmenu:${project.modmenu_version}") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
 	
-	include modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_version}") { // one or the other, most likely spruce
+	include modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") { // one or the other, most likely spruce
 		exclude(group: "net.fabricmc.fabric-api")
 	}
 	include modApi("dev.lambdaurora:spruceui:${project.spruceui_version}")
 	
-	include modApi("com.github.LlamaLad7:MixinExtras:0.1.0-rc5")
-	annotationProcessor "com.github.LlamaLad7:MixinExtras:0.1.0-rc5"
+	// apparently this is bundled in fabric loader 15+? check how to use that version instead
+	include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:${project.mixinextras_versions}")))
+	
+	// include modApi("com.github.LlamaLad7:MixinExtras:0.1.0-rc5")
+	// annotationProcessor "com.github.LlamaLad7:MixinExtras:0.1.0-rc5"
 	
 	// implementation 'me.nullicorn:Nedit:2.2.0' // temporary unless proven useful
 	include modApi("org.snakeyaml:snakeyaml-engine:${snakeyaml_engine_version}")
