--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx1G
 # https://fabricmc.net/develop
 minecraft_version=1.19
 yarn_mappings=1.19+build.4
-loader_version=0.14.9
+loader_version=0.15.6
 fabric_version=0.58.0+1.19
 
 # Mod Properties
@@ -18,3 +18,4 @@ snakeyaml_engine_version=2.4
 cloth_config_version=8.2.88
 spruceui_version=3.3.3+1.18
 architectury_version=5.12.44
+mixinextras_versions=0.3.5
