attempted to use cloth config and cleaned up some config code

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,13 @@ archives_base_name = pandora
 
 # Dependencies
 modmenu_version=4.0.4
-slf4j_simple_version=1.7.9 # will crash if updated
+# will crash if updated
+#slf4j_simple_version=1.7.9
 snakeyaml_engine_version=2.4
-cloth_config_version=8.2.88
-spruceui_version=3.3.3+1.18
-architectury_version=5.12.44
+# 8.2.88
+#cloth_config_version=8.3.103
+# https://maven.gegy.dev/dev/lambdaurora/spruceui/
+#spruceui_version=4.0.0+1.19
+#architectury_version=5.12.44
 mixinextras_versions=0.3.5
+#yacl_version=2.1.0
