--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,10 @@ repositories {
 	mavenCentral()
 	
 	maven { url 'https://maven.terraformersmc.com/releases' }
-	maven { url "https://maven.shedaniel.me/" }
-	maven { url 'https://jitpack.io' }
-	maven { url 'https://maven.gegy.dev' }
+	// maven { url 'https://maven.isxander.dev/releases' }
+	// maven { url "https://maven.shedaniel.me/" }
+	// maven { url 'https://jitpack.io' }
+	// maven { url 'https://maven.gegy.dev' }
 }
 
 dependencies {
@@ -33,12 +34,15 @@ dependencies {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
 	
-	include modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") { // one or the other, most likely spruce
-		exclude(group: "net.fabricmc.fabric-api")
-	}
-	include modApi("dev.lambdaurora:spruceui:${project.spruceui_version}")
+	// modImplementation("dev.isxander.yacl:yet-another-config-lib-fabric:3.1.0+1.19.4")
+
 	
-	// apparently this is bundled in fabric loader 15+? check how to use that version instead
+	// include modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") { // one or the other, most likely spruce
+	//	exclude(group: "net.fabricmc.fabric-api")
+	// }
+	
+	// include modApi("dev.lambdaurora:spruceui:${project.spruceui_version}")
+	
 	include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:${project.mixinextras_versions}")))
 	
 	// include modApi("com.github.LlamaLad7:MixinExtras:0.1.0-rc5")
