dependency fix formatting

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ archives_base_name = pandora
 modmenu_version=4.0.4
 # will crash if updated
 #slf4j_simple_version=1.7.9
-snakeyaml_engine_version=2.4
+snakeyaml_version=2.2
 # 8.2.88
 #cloth_config_version=8.3.103
 # https://maven.gegy.dev/dev/lambdaurora/spruceui/
