--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,8 @@ dependencies {
 	// annotationProcessor "com.github.LlamaLad7:MixinExtras:0.1.0-rc5"
 	
 	// implementation 'me.nullicorn:Nedit:2.2.0' // temporary unless proven useful
-	include modApi("org.snakeyaml:snakeyaml-engine:${snakeyaml_engine_version}")
+	// not sure why the old lib suddenly stopped working but this works for now
+	include modApi("org.yaml:snakeyaml:${snakeyaml_version}")
 }
 
 processResources {
