--- a/src/main/resources/assets/pandora/pandora.debug.properties
+++ b/src/main/resources/assets/pandora/pandora.debug.properties
@@ -5,6 +5,9 @@
 flameLightSourceDecayRate=1.0
 forceGruesAlwaysAttack=false
 
-enableSavingConfigFile = false
-useDebugMenuForModMenu = false
-deleteConfigsOnLoad = false
+# rename this
+enableSavingConfigFile=false
+useDebugMenuForModMenu=false
+deleteConfigsOnLoad=false
+
+PaintLightValues=false
